k8s/customer-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-service
  labels:
    name: customer-service
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/customer-service'
            backend:
              service:
                name: customer-service
                port:
                  number: 8087
